@@ -6,7 +6,7 @@
 
 <h2>Download files</h2>
 
-The CVS can be acccessed directly from the project CVS <a href="http://sourceforge.net/cvs/?group_id=99072">repository</a>. The latest <a href="ChangeLog">ChangeLog</a> can be viewed directly.
+The CVS can be acccessed directly from the project <a href="http://sourceforge.net/cvs/?group_id=99072" target="_top">CVS repository</a>. The latest <a href="ChangeLog">ChangeLog</a> can be viewed directly from this site.
 <table>
 <tr>
 <th>
