@@ -3,6 +3,12 @@ Matrix Schreier-Sims NEWS
 Important new features are listed here. 
 More detailed changed are in the ChangeLog.
 
+2004-06-24
+    The trick of using alternating actions at different levels of the 
+    algorthim has now been implemented. Each base point in the initial partial 
+    base is preceded by the one-dimensional subspace (ie the line) containing 
+    it, and the projective action of the group is used on this line.
+    
 2004-02-09
     Implemented a more efficient version, using explicit levels and the trick
     of stripping Schreier generators. Code seems to be more than twice as fast.
